# zox

./: .gitignore  Cargo.toml  README.md  build.rs  index.js  wrapper.h
exemples/: bubble_sort.js  console.ts  insertion_sort.js  main.ts  math.js  merge_sort.js  merge_sort.ts  module.ts  pi_bigint.js
src/: main.rs
src/bindings/: droppable.rs  mod.rs  utils.rs  value.rs
src/cli/: mod.rs
src/compiler/: transpiler.rs
src/core/: engine.rs  event_loop.rs  js_ref.rs  loader.rs  mod.rs
src/runtime/: console.rs  runtime.rs
src/utils/: constants.rs  mod.rs  primitives.rs
