[package]
name = "zox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.115"
swc = "0.273.24"
swc_common = {version = "0.33.22", features = ["tty-emitter"] }
log = "0.4"
swc_ecma_visit = "0.98.7"
swc_ecma_parser = "0.143.13"
swc_ecma_transforms_typescript = "0.188.18"
swc_ecma_ast = "0.112.7"
swc_core = "0.90.31"
anyhow = "1.0.79"
swc_ecma_transforms = "0.229.18"
swc_ecma_codegen = "0.148.15"
relative-path = "1.9.2"
lazy_static = "1.4.0"
tokio = {version = "1.37.0", features = ["rt"]}
num-bigint = "0.4.4"
num-traits = "0.2.18"
# libquickjs-sys = {package="hirofa-quickjs-sys", version="0.4.0", features=["bellard"]}
quickjs-sys = {package="hirofa-quickjs-sys", version="0.4.0", features=["bellard"]}

[build-dependencies]
bindgen = "*"
